fix: margin on smaller screens

--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@ body {
   background-color: #3b3b3b;
   color: #9e9e9e;
 
-  font-size: clamp(1rem, 3vw, 3.5rem);
+  font-size: clamp(1rem, 3.2vw, 3.5rem);
   font-family: var(---font);
   background-color: var(---c-bg);
   color: var(---c-a1);
@@ -148,4 +148,10 @@ footer {
   color: var(---c-a2);
   width: max-content;
   margin-bottom: 0.1em;
+}
+
+@media (max-width: 600px) {
+  .default {
+    margin-top: 8vh;
+  }
 }
